catkin_ws/logs/rgbd_slam/build.make.019.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/main.cpp: In function ‘void testTransform()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/main.cpp:154:64: error: ‘processFrame’ was not declared in this scope
  processFrame(frame2, frame1, tmCurToNode, imCurToNode, newNode);
                                                                ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/main.cpp: At global scope:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/main.cpp:161:13: warning: ‘bool processFrame(const Frame&, const Frame&, Eigen::Matrix4f&, Eigen::Matrix<float, 6, 6>&, bool&)’ defined but not used [-Wunused-function]
 static bool processFrame(const Frame& newFrame, const Frame& prevNode, Matrix4f& tmCurToNode, Matrix<float, 6, 6>& imCurToNode, bool& newNode)
             ^
make[2]: *** [CMakeFiles/rgbd_slam.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/rgbd_slam.dir/all] Error 2
make: *** [all] Error 2
